--- a/README
+++ b/README
@@ -24,5 +24,4 @@ LIMITATIONS:
 3) MODULING IS NOT DONE PROPERLY I WILL RECTIFY IT FOR NXT ASSSIGNMENT
 
 THANKYOU
-2019101116
-MANUBOLU NARAIN SREEHITH
+Vineesh
